--- a/Notepad/Notepad.vcxproj.filters
+++ b/Notepad/Notepad.vcxproj.filters
@@ -16,6 +16,7 @@
     <ClCompile Include="GeometryGenerator.cpp" />
     <ClCompile Include="D3D11Utils.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MeshData.h" />
@@ -26,12 +27,22 @@
     <ClInclude Include="D3D11Utils.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ConstantBuffers.h" />
+    <ClInclude Include="Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="BasicVS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
     <FxCompile Include="BasicPS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="NormalVS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="NormalGS.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="NormalPS.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
